# storage-hideyoshi.com

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
.k8s/: config.template.yml  deployment.template.yml  redis.template.yml  secrets.enc.yml
storage_service/: __init__.py
storage_service/config/: config_s3.py
storage_service/controller/: storage_controller.py
storage_service/depends/: depend_s3_service.py  depend_virus_checker_service.py
